# katniss

./: .gitignore  Cargo.toml  Justfile
.github/workflows/: rust.yml
katniss/: Cargo.toml
katniss-ingestor/: Cargo.toml
katniss-ingestor/src/: arrow.rs  buffer.rs  errors.rs  full_ingestor.rs  ingestors.rs  lance_ingestion.rs  lib.rs  parquet.rs  pipeline.rs  temporal.rs  temporal_rotator.rs
katniss-ingestor/src/ingestors/: buffered_ingestor.rs  fs_ingestor.rs  lance_fs_ingestor.rs  parquet_buffered.rs  parquet_fs.rs  proto_repeated.rs  stub_lance.rs  temporal_parquet_ingestor.rs
katniss-ingestor/src/pipeline/: buffers.rs  file_sink.rs  parquet_converter.rs  temporal_rotator.rs
katniss-ingestor/src/timestuff/: buffers.rs  mod.rs  temporal_rotator.rs
katniss-parquet/: Cargo.toml
katniss-parquet/src/: errors.rs  lib.rs
katniss-pb2arrow/: Cargo.toml
katniss-pb2arrow/src/: errors.rs  lib.rs  proto_repeated_consumer.rs  record_conversion.rs  schema_conversion.rs
katniss-pb2arrow/src/record_conversion/: builder_appending.rs  builder_creation.rs
katniss-test/: Cargo.toml  Justfile  build.rs
katniss-test/src/: integration_tests.rs  lib.rs  test_util.rs
katniss-test/src/integration_tests/: proto_repeated_tests.rs  proto_through_parquet_ingestion_tests.rs  temporal_ingestor_tests.rs  test_parse_dict_field.rs  test_util.rs
katniss-test/src/tests/: proto_through_parquet_ingestion_tests.rs  test_util.rs
katniss-test/test_out.lance/: _latest.manifest
katniss-test/test_out.lance/data/: 659d2d28-e93a-42a2-995f-77cf67ec8f54.lance
katniss/src/: lib.rs
prost-arrow/: Cargo.toml
prost-arrow-parquet/: Cargo.toml
prost-arrow-parquet/src/: errors.rs  lib.rs
prost-arrow-test/: Cargo.toml  Justfile  build.rs
prost-arrow-test/src/: lib.rs
prost-arrow/src/: errors.rs  lib.rs  record_conversion.rs  records.rs  schema.rs  schema_conversion.rs
prost-arrow/src/record_conversion/: builder_appending.rs  builder_creation.rs  macros.rs
prost-arrow/src/records/: macros.rs
prost-arrow/tests/protos/: nested_enum.proto  version_3.proto
protos/test/: space_corp.proto  spacecorp.proto  version_2.proto  version_3.proto
src/: lib.rs  schema.rs
tests/protos/: version_2.proto
