
[workspace]

members = ["katniss", "katniss-ingestor", "katniss-pb2arrow", "katniss-test"]

[workspace.dependencies]
anyhow = "1.0.71"
arrow-array = "42.0.0"
arrow-schema = "42.0.0"
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["deprecated", "derive", "env"] }
itertools = "0.10.5"
lance = { git = "https://github.com/lancedb/lance.git", rev = "e642431ded42e6c5f4b5b3a53ae46e20ba60c260"}
object_store = { version = "0.5.6", features = ["gcp"] }
prost = "0.11.8"
prost-reflect = "=0.10.2"
tempfile = "3.6.0"
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
which = "4.4.0"
