
[workspace]

members = ["katniss", "katniss-ingestor", "katniss-pb2arrow", "katniss-test"]

[workspace.dependencies]
anyhow = "1.0.71"
arrow-array = "43.0"
arrow-schema = "43.0"
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["deprecated", "derive", "env"] }
futures = "0.3.28"
itertools = "0.10.5"
lance = { git = "https://github.com/lancedb/lance", rev = "eb8f2578cb54f4033599946b510a07740f6c8a50" }
object_store = { version = "0.5.6", features = ["gcp"] }
prost = "0.11.8"
prost-reflect = "=0.10.2"
tempfile = "3.6.0"
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
which = "4.4.0"
