[package]
name = "katniss-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "33.0.0"
chrono = "0.4.23"
katniss-pb2arrow = { path = "../katniss-pb2arrow" }
thiserror = "1.0.39"
arrow-schema = "33.0.0"
itertools = "0.10.5"
lance = { git = "https://github.com/eto-ai/lance.git", branch = "main" }
object_store = "0.5.5"
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }


[dev-dependencies]
anyhow = "1.0.69"
katniss-test = { path = "../katniss-test" }
tempfile = "3.4.0"
