[package]
name = "katniss-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-schema.workspace = true
chrono.workspace = true
itertools.workspace = true
lance.workspace = true
object_store.workspace = true
parquet.workspace = true
thiserror.workspace = true
tokio.workspace = true

katniss-pb2arrow = { path = "../katniss-pb2arrow" }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true

katniss-test = { path = "../katniss-test" }
