[package]
name = "katniss-pb2arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "33.0.0"
arrow-schema = "33.0.0"
prost-reflect = "0.10.2"
tempfile = "3.4.0"
thiserror = "1.0.39"
which = "4.4.0"

[dev-dependencies]
anyhow = "1.0.69"
katniss-test = { path = "../katniss-test" }
