[package]
name = "katniss-pb2arrow"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
prost-reflect.workspace = true
thiserror.workspace = true
tempfile.workspace = true
which.workspace = true

[dev-dependencies]
anyhow.workspace = true
katniss-test = { path = "../katniss-test" }
