[package]
name = "katniss-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arrow-schema = "34.0.0"
clap = { version = "4.1.6", features = ["deprecated", "derive", "env"] }
parquet = "34.0.0"
prost = "0.11.8"
katniss-ingestor = { path = "../katniss-ingestor" }
katniss-pb2arrow = { path = "../katniss-pb2arrow" }
prost-reflect = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["tracing-log"] }

[build-dependencies]
prost-build = "0.11.8"
