[package]
name = "katniss-test"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
clap.workspace = true
prost.workspace = true
prost-reflect.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

katniss-ingestor = { path = "../katniss-ingestor" }
katniss-pb2arrow = { path = "../katniss-pb2arrow" }

[build-dependencies]
prost-build = "0.11.8"
