[package]
name = "katniss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katniss-pb2arrow = { path = "../katniss-pb2arrow" }
katniss-ingestor = { path = "../katniss-ingestor" }

# re-exports
arrow-array.workspace = true
arrow-schema.workspace = true
object_store.workspace = true
parquet.workspace = true
prost.workspace = true
prost-reflect.workspace = true
