[package]
name = "katniss"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katniss-pb2arrow = { version = "0.0.2", path = "../katniss-pb2arrow" }
katniss-ingestor = { version = "0.0.2", path = "../katniss-ingestor" }

# re-exports
arrow-array.workspace = true
arrow-schema.workspace = true
object_store.workspace = true
parquet.workspace = true
prost.workspace = true
prost-reflect.workspace = true
